--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,14 +7,17 @@
     <title>Document</title>
 </head>
 <style>
-    h2,p{
+    h2,
+    p {
         padding: 0px;
-        margin:0px;
+        margin: 0px;
 
     }
-    p{
-    margin-top:5px;
+
+    p {
+        margin-top: 5px;
     }
+
     body {
         -webkit-user-select: none;
         /* Safari */
@@ -24,254 +27,334 @@
         /* Internet Explorer/Edge */
         user-select: none;
         /* Standard */
+        text-align: justify;
+        padding: 8px;
+        background-color: #373e46;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        color: white;
+    }
+    a{
+        color: tomato;
+        text-decoration: none;
     }
 
+    @media only screen and (min-width: 600px) {
+        body {
+            padding:0 20% !important;
+        }
+    }
 </style>
-<body text="white" bgcolor="#373e46" style="text-align: justify; padding:5px;">
+
+<body>
     <h2>
         Privacy Policy
     </h2>
 
 
-    
-        <p>Visionary Innovations built the Fenom Downloader app as a Free app. This SERVICE is provided by Visionary
-            Innovations at no cost and is intended for use as is.</p>
+
+    <p>Visionary Innovations built the Fenom Downloader app as a Free app. This SERVICE is provided by Visionary
+        Innovations at no cost and is intended for use as is.</p>
 
 
 
-        <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of
-            Personal
-            Information if anyone decided to use my Service.</p>
+    <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of
+        Personal
+        Information if anyone decided to use my Service.</p>
 
 
 
-        <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this
-            policy. The Personal Information that I collect is used for providing and improving the Service. I will not
-            use
-            or share your information with anyone except as described in this Privacy Policy.</p>
+    <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this
+        policy. The Personal Information that I collect is used for providing and improving the Service. I will not
+        use
+        or share your information with anyone except as described in this Privacy Policy.</p>
 
 
 
-        <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are
-            accessible
-            at Fenom Downloader unless otherwise defined in this Privacy Policy.</p>
+    <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are
+        accessible
+        at Fenom Downloader unless otherwise defined in this Privacy Policy.</p>
 
 
 
-        <br><p><h2>Information Collection and Use</h2></p>
+    <br>
+    <p>
+    <h2>Information Collection and Use</h2>
+    </p>
 
 
 
-        <p>For a better experience, while using our Service, I may require you to provide us with certain personally
-            identifiable information. The information that I request will be retained on your device and is not
-            collected by
-            me in any way.</p>
+    <p>For a better experience, while using our Service, I may require you to provide us with certain personally
+        identifiable information. The information that I request will be retained on your device and is not
+        collected by
+        me in any way.</p>
 
 
 
-        <div class="wordads-ad-wrapper">
-            <div class="wordads-ad">
-                <div class="wordads-ad-title">Advertisement</div>
-                <div class="wordads-ad-content wordads-ad-inline" id="wordads-ad-638641"></div>
-                <div class="wordads-ad-controls"></div>
-            </div>
+    <div class="wordads-ad-wrapper">
+        <div class="wordads-ad">
+            <div class="wordads-ad-title">Advertisement</div>
+            <div class="wordads-ad-content wordads-ad-inline" id="wordads-ad-638641"></div>
+            <div class="wordads-ad-controls"></div>
         </div>
-        <p>The app does use third-party services that may collect information used to identify you.</p>
+    </div>
+    <p>The app does use third-party services that may collect information used to identify you.</p>
 
 
 
-        <p>Link to the privacy policy of third-party service providers used by the app</p>
+    <p>Link to the privacy policy of third-party service providers used by the app</p>
 
 
 
-        <ul>
-            <li><a href="https://www.google.com/policies/privacy/">Google Play Services</a></li>
+    <ul>
+        <li><a href="https://www.google.com/policies/privacy/">Google Play Services</a></li>
 
 
 
-            <li><a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a></li>
+        <li><a href="https://support.google.com/admob/answer/6128543?hl=en">AdMob</a></li>
 
 
 
-            <li><a href="https://firebase.google.com/policies/analytics">Google Analytics for Firebase</a></li>
-        </ul>
+        <li><a href="https://firebase.google.com/policies/analytics">Google Analytics for Firebase</a></li>
+    </ul>
 
 
 
-        <br><p><h2>Log Data</h2></p>
+    <br>
+    <p>
+    <h2>Log Data</h2>
+    </p>
 
 
 
-        <p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and
-            information (through third-party products) on your phone called Log Data. This Log Data may include
-            information
-            such as your device Internet Protocol (“IP”) address, device name, operating system version, the
-            configuration
-            of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
-        </p>
+    <p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and
+        information (through third-party products) on your phone called Log Data. This Log Data may include
+        information
+        such as your device Internet Protocol (“IP”) address, device name, operating system version, the
+        configuration
+        of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
+    </p>
 
 
 
-        <br><p><h2>Cookies</h2></p>
+    <br>
+    <p>
+    <h2>Cookies</h2>
+    </p>
 
 
 
-        <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These
-            are
-            sent to your browser from the websites that you visit and are stored on your device’s internal memory.</p>
+    <p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These
+        are
+        sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
 
 
 
-        <p>This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries
-            that use “cookies” to collect information and improve their services. You have the option to either accept
-            or
-            refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our
-            cookies,
-            you may not be able to use some portions of this Service.</p>
+    <p>This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries
+        that use “cookies” to collect information and improve their services. You have the option to either accept
+        or
+        refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our
+        cookies,
+        you may not be able to use some portions of this Service.</p>
 
 
 
-        <br><p><h2>Service Providers</h2></p>
+    <br>
+    <p>
+    <h2>Service Providers</h2>
+    </p>
 
 
 
-        <p>I may employ third-party companies and individuals due to the following reasons:</p>
+    <p>I may employ third-party companies and individuals due to the following reasons:</p>
 
 
 
-        <ul>
-            <li>To facilitate our Service;</li>
+    <ul>
+        <li>To facilitate our Service;</li>
 
 
 
-            <li>To provide the Service on our behalf;</li>
+        <li>To provide the Service on our behalf;</li>
 
 
 
-            <li>To perform Service-related services; or</li>
+        <li>To perform Service-related services; or</li>
 
 
 
-            <li>To assist us in analyzing how our Service is used.</li>
-        </ul>
+        <li>To assist us in analyzing how our Service is used.</li>
+    </ul>
 
 
 
-        <p>I want to inform users of this Service that these third parties have access to their Personal Information.
-            The
-            reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose
-            or
-            use the information for any other purpose.</p>
+    <p>I want to inform users of this Service that these third parties have access to their Personal Information.
+        The
+        reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose
+        or
+        use the information for any other purpose.</p>
 
 
 
-        <br><p><h2>Security</h2></p>
+    <br>
+    <p>
+    <h2>Security</h2>
+    </p>
 
 
 
-        <p>I value your trust in providing us your Personal Information, thus we are striving to use commercially
-            acceptable
-            means of protecting it. But remember that no method of transmission over the internet, or method of
-            electronic
-            storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
+    <p>I value your trust in providing us your Personal Information, thus we are striving to use commercially
+        acceptable
+        means of protecting it. But remember that no method of transmission over the internet, or method of
+        electronic
+        storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
 
 
 
-        <br><p><h2>Links to Other Sites</h2></p>
+    <br>
+    <p>
+    <h2>Links to Other Sites</h2>
+    </p>
 
 
 
-        <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to
-            that
-            site. Note that these external sites are not operated by me. Therefore, I h2ly advise you to review the
-            Privacy Policy of these websites. I have no control over and assume no responsibility for the content,
-            privacy
-            policies, or practices of any third-party sites or services.</p>
+    <p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to
+        that
+        site. Note that these external sites are not operated by me. Therefore, I h2ly advise you to review the
+        Privacy Policy of these websites. I have no control over and assume no responsibility for the content,
+        privacy
+        policies, or practices of any third-party sites or services.</p>
 
 
 
-        <br><p><h2>Children’s Privacy</h2></p>
+    <br>
+    <p>
+    <h2>Children's Privacy</h2>
+    </p>
 
 
 
-        <p>These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable
-            information from children under 13 years of age. In the case I discover that a child under 13 has provided
-            me
-            with personal information, I immediately delete this from our servers. If you are a parent or guardian and
-            you
-            are aware that your child has provided us with personal information, please contact me so that I will be
-            able to
-            do the necessary actions.</p>
+    <p>These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable
+        information from children under 13 years of age. In the case I discover that a child under 13 has provided
+        me
+        with personal information, I immediately delete this from our servers. If you are a parent or guardian and
+        you
+        are aware that your child has provided us with personal information, please contact me so that I will be
+        able to
+        do the necessary actions.</p>
 
 
 
-        <p><h2>DNS Change and Local VPN Tunneling Feature:</h2> The DNS change and local VPN tunneling feature
-            implemented in the Fenom app serves the purpose of enhancing the accessibility and security of internet
-            browsing. This feature allows users to access websites that may be inaccessible or fail to resolve using the
-            default DNS resolver provided by their Internet Service Provider (ISP).</p>
+    <p>
+    <p>
+    <h2>How Our Local VPN Tunnel Works</h2>
+    </p>
 
+    <p>
+        When you enable the Local VPN tunnel feature in [Your App Name], your device's DNS resolution requests are
+        routed through
+        Cloudflare's DNS server (1.1.1.1) instead of your default DNS resolver provided by your Internet Service
+        Provider (ISP). This feature serves the following purposes:
+    </p>
 
+    <ol>
+        <li>
+            <h2>Overcoming Accessibility Issues</h2>: Some websites may be blocked or restricted by certain ISPs or
+            government authorities. The DNS change feature enables users to bypass such restrictions and access these
+            websites by using Cloudflare's DNS resolver.
+        </li>
 
-        <br><p><h2>Functionality:</h2></p>
+        <li>
+            <h2>Improved Performance</h2>: By using Cloudflare's DNS server (1.1.1.1), users can experience faster and
+            more efficient DNS resolution, leading to quicker website loading times.
+        </li>
 
+        <li>
+            <h2>Enhanced Privacy and Security</h2>: Cloudflare's DNS service is known for its privacy-centric approach
+            and commitment to not log user data. You can learn more about Cloudflare's DNS privacy practices by visiting
+            their privacy policy <a
+                href="https://developers.cloudflare.com/1.1.1.1/privacy/public-dns-resolver/">here</a>. By using this
+            service, users can enjoy enhanced privacy and security as their DNS queries are not logged or stored.
+        </li>
+    </ol>
 
 
-        <ol>
-            <li><h2>Overcoming Accessibility Issues:</h2> Some websites might be blocked or restricted by
-                certain
-                ISPs or government authorities. The DNS change feature enables users to bypass such restrictions and
-                access
-                these websites by using a different DNS resolver.</li>
 
 
+    <br>
+    <p>
+    <h2>Functionality:</h2>
+    </p>
 
-            <li><h2>Improved Performance:</h2> The feature also aims to improve the performance and speed of DNS
-                resolution. By utilizing CloudFlare’s DNS server with the IP address 1.1.1.1, users can experience
-                faster
-                and more efficient DNS resolution, leading to quicker website loading times.</li>
 
 
+    <ol>
+        <li>
+            <h2>Overcoming Accessibility Issues:</h2> Some websites might be blocked or restricted by
+            certain ISPs or government authorities. The DNS change feature enables users to bypass such restrictions and
+            access
+            these websites by using a different DNS resolver.
+        </li>
 
-            <li><h2>Enhanced Privacy and Security:</h2> CloudFlare’s DNS service is known for its
-                privacy-centric
-                approach and commitment to not log user data. By using this service, users can enjoy enhanced privacy
-                and
-                security while browsing, as their DNS queries are not logged or stored.</li>
-        </ol>
 
 
+        <li>
+            <h2>Improved Performance:</h2> The feature also aims to improve the performance and speed of DNS
+            resolution. By utilizing CloudFlare's DNS server with the IP address 1.1.1.1, users can experience
+            faster
+            and more efficient DNS resolution, leading to quicker website loading times.
+        </li>
 
-        <p><h2>Data Handling:</h2> It’s important to note that while using this feature, the Fenom app does not
-            collect, process, or store any data related to users’ DNS queries, IP addresses, or browsing activities. We
-            are
-            committed to ensuring the privacy and security of our users, and as such, no data is retained or shared with
-            any
-            third parties.</p>
 
 
+        <li>
+            <h2>Enhanced Privacy and Security:</h2> CloudFlare's DNS service is known for its
+            privacy-centric
+            approach and commitment to not log user data. By using this service, users can enjoy enhanced privacy
+            and
+            security while browsing, as their DNS queries are not logged or stored.
+        </li>
+    </ol>
 
-        <br><p><h2>Changes to This Privacy Policy</h2></p>
 
 
+    <p>
+    <h2>Data Handling:</h2> It's important to note that while using this feature, the Fenom app does not
+    collect, process, or store any data related to users' DNS queries, IP addresses, or browsing activities. We
+    are
+    committed to ensuring the privacy and security of our users, and as such, no data is retained or shared with
+    any
+    third parties.</p>
 
-        <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for
-            any
-            changes. I will notify you of any changes by posting the new Privacy Policy on this page.</p>
 
 
+    <br>
+    <p>
+    <h2>Changes to This Privacy Policy</h2>
+    </p>
 
-        <p>This policy is effective as of 2023-09-10</p>
 
 
+    <p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for
+        any
+        changes. I will notify you of any changes by posting the new Privacy Policy on this page.</p>
 
-        <br><p><h2>Contact Us</h2></p>
 
 
+    <p>This policy is effective as of 2023-10-22</p>
 
-        <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at
-            szdownloader@gmail.com</p>
 
-    
+
+    <br>
+    <p>
+    <h2>Contact Us</h2>
+    </p>
+
+
+
+    <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at
+        szdownloader@gmail.com</p>
+
+
 </body>
 
 </html>
